dig / microsite: fix for ie9 visibility THE CAST & CREW gallery

--- a/docroot/sites/usanetwork/themes/aurora_usa/usanetwork_microsite_themes/dig/css/ms_characters_styles.css
+++ b/docroot/sites/usanetwork/themes/aurora_usa/usanetwork_microsite_themes/dig/css/ms_characters_styles.css
@@ -40,9 +40,9 @@ body{
   top: 0;
   left: 0;
   max-width: 1245px;
-  /*opacity: 0;*/
+  opacity: 0;
   max-height: 370px;
-  /*overflow: hidden;*/
+  overflow: hidden;
 }
 #microsite #home .characters-cast h2 {
   font-family: "avalonmedium", "Proxima N W01 Smbd", Helvetica, Arial, sans-serif;
@@ -93,6 +93,32 @@ body{
 #microsite #home .characters-cast .btns.next {
   right: -22px;
 }
+/* for ie 9*/
+html.ie9 #microsite #home .characters-cast .btns a{
+  display: block;
+}
+html.ie9 #microsite #home .characters-cast .btns a.disabled {
+  display: none;
+}
+html.ie9 #microsite #home .characters-cast .btns a.bx-prev{
+  background-image: url('../images/icons/arrow-prev.png');
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  background-size: 18px 30px;
+}
+html.ie9 #microsite #home .characters-cast .btns a.bx-next{
+  background-image: url('../images/icons/arrow-next.png');
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  background-size: 18px 30px;
+}
+/*end*/
+#microsite #home .characters-cast .bx-wrapper {
+  -webkit-box-shadow: none;
+  box-shadow: none;
+  border: none;
+  background: none;
+}
 #microsite #home .characters-cast .btns a {
   color: #FFF;
   color: rgba(255, 255, 255, 0.5);
@@ -130,21 +156,6 @@ body{
   position: absolute;
   top: -9999px;
   left: -9999px;
-}
-/* for ie 9*/
-html.ie9 #microsite #home .characters-cast .btns a.bx-prev{
-  display: block;
-  background-image: url('../images/icons/arrow-prev.png');
-  background-repeat: no-repeat;
-  background-position: 50% 50%;
-  background-size: 18px 30px;
-}
-html.ie9 #microsite #home .characters-cast .btns a.bx-next{
-  display: block;
-  background-image: url('../images/icons/arrow-next.png');
-  background-repeat: no-repeat;
-  background-position: 50% 50%;
-  background-size: 18px 30px;
 }
 /* HOME SECTION MEDIA QUERY START */
 @media (max-width: 1580px) {
